--- a/clusters/local.home/apps/cost-management-operator/overlays/default/kustomization.yaml
+++ b/clusters/local.home/apps/cost-management-operator/overlays/default/kustomization.yaml
@@ -7,7 +7,7 @@ bases:
 patchesJson6902:
   - path: patch-source-and-name.yaml
     target:
-      group: koku-metrics-cfg.openshift.io
-      kind: KokuMetricsConfig
-      name: instance
+      group: costmanagement-metrics-cfg.openshift.io/v1beta1
+      kind: CostManagementMetricsConfig
+      name: config
       version: v1beta1
