--- a/clusters/aws.cluster/argocd/apps/cluster/overlays/default/kustomization.yaml
+++ b/clusters/aws.cluster/argocd/apps/cluster/overlays/default/kustomization.yaml
@@ -14,10 +14,10 @@ resources:
 - ../../../../../../../components/argocd/apps/config-prometheus-user-app/base
 - ../../../../../../../components/argocd/apps/config-container-security/base
 - ../../../../../../../components/argocd/apps/config-namespace-config-operator/base
-- ../../../../../../../components/argocd/apps/config-web-terminal-operator/base
+# - ../../../../../../../components/argocd/apps/config-web-terminal-operator/base
 - ../../../../../../../components/argocd/apps/config-pipeline-operator/base
 - ../../../../../../../components/argocd/apps/config-dev-tools/base
-- ../../../../../../../components/argocd/apps/config-cost-management/base
+# - ../../../../../../../components/argocd/apps/config-cost-management/base
 - ../../../../../../../components/argocd/apps/tenant-product-catalog/base
 
 patches:
