--- a/components/apps/namespace-configuration-operator/overlays/default/patch-default-ns-multitenant.yaml
+++ b/components/apps/namespace-configuration-operator/overlays/default/patch-default-ns-multitenant.yaml
@@ -50,12 +50,13 @@ spec:
     spec:
       containers:
       - name: patch-default-ns-multitenant
-        image: registry.redhat.io/openshift4/ose-cli:v4.4
+        image: registry.redhat.io/openshift4/ose-cli:v4.8
         command:
             - /bin/bash
             - -c
             - |
 
+              echo "Adding label 'network.openshift.io/policy-group=ingress` to default namespace"
               oc label namespace default 'network.openshift.io/policy-group=ingress' --overwrite
       restartPolicy: Never
       serviceAccountName: patch-job
