Fix branch for ACS

--- a/components/argocd/apps/config-acs/base/config-acs.yaml
+++ b/components/argocd/apps/config-acs/base/config-acs.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: components/apps/acs-operator/overlays/sso
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: acs
+    targetRevision: master
   syncPolicy:
     automated:
       selfHeal: true
