Fix namespace issues

--- a/components/apps/acs-operator/overlays/sso/create-sso-auth-provider-job.yaml
+++ b/components/apps/acs-operator/overlays/sso/create-sso-auth-provider-job.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "10"
   name: create-sso-auth-provider
+  namespace: stackrox
 spec:
   template:
     spec:
