Fix missing apostrophe

--- a/components/apps/namespace-configuration-operator/overlays/default/patch-default-ns-multitenant.yaml
+++ b/components/apps/namespace-configuration-operator/overlays/default/patch-default-ns-multitenant.yaml
@@ -56,7 +56,7 @@ spec:
             - -c
             - |
 
-              echo "Adding label 'network.openshift.io/policy-group=ingress` to default namespace"
+              echo "Adding label 'network.openshift.io/policy-group=ingress' to default namespace"
               oc label namespace default 'network.openshift.io/policy-group=ingress' --overwrite
       restartPolicy: Never
       serviceAccountName: patch-job
