--- a/clusters/local.home/apps/clusterversion/base/clusterversion.yaml
+++ b/clusters/local.home/apps/clusterversion/base/clusterversion.yaml
@@ -3,9 +3,9 @@ kind: ClusterVersion
 metadata:
   name: version
 spec:
-  channel: candidate-4.8
+  channel: fast-4.8
   clusterID: 4d11acb7-286f-42e1-868c-55f1e15687c7
   desiredUpdate:
-    image: quay.io/openshift-release-dev/ocp-release@sha256:0e82d17ababc79b10c10c5186920232810aeccbccf2a74c691487090a2c98ebc
-    version: 4.8.2
+    image: quay.io/openshift-release-dev/ocp-release@sha256:9232aeea4bf938571fdfad7085428bcac4ffdaffa5559209ad8bca20fa37a2f6
+    version: 4.8.3
   upstream: https://api.openshift.com/api/upgrades_info/v1/graph
