Test clean branch of catalog repo

--- a/components/argocd/apps/config-container-security/base/config-container-security-app.yaml
+++ b/components/argocd/apps/config-container-security/base/config-container-security-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: container-security-operator/base
     repoURL: https://github.com/redhat-canada-gitops/catalog.git
-    targetRevision: master
+    targetRevision: clean
   syncPolicy:
     automated:
       selfHeal: true
