Change to main branch

--- a/components/argocd/apps/config-container-security/base/config-container-security-app.yaml
+++ b/components/argocd/apps/config-container-security/base/config-container-security-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: container-security-operator/base
     repoURL: https://github.com/redhat-cop/gitops-catalog.git
-    targetRevision: clean
+    targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
