--- a/components/argocd/apps/config-web-terminal-operator/base/config-web-terminal-operator-app.yaml
+++ b/components/argocd/apps/config-web-terminal-operator/base/config-web-terminal-operator-app.yaml
@@ -16,7 +16,7 @@ spec:
   source:
     path: web-terminal-operator/overlays/aggregate
     repoURL: https://github.com/redhat-cop/gitops-catalog.git
-    targetRevision: master
+    targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
