--- a/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
+++ b/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
 - ../../../../../../../components/argocd/apps/config-dev-tools/base
 - ../../../../../../../components/argocd/apps/config-cost-management/base
 - ../../../../../../../components/argocd/apps/tenant-product-catalog/base
+- ../../../../../../../components/argocd/apps/tekton-cluster-tasks/base
 
 patches:
 - patch: |-
