Use modified version of rox-check-image task

--- a/components/apps/tekton-cluster-tasks/base/kustomization.yaml
+++ b/components/apps/tekton-cluster-tasks/base/kustomization.yaml
@@ -1,4 +1,6 @@
 resources:
 - https://raw.githubusercontent.com/stackrox/contributions/main/ci/Tekton/Tasks/rox-deployment-check-task.yml
-- https://raw.githubusercontent.com/stackrox/contributions/main/ci/Tekton/Tasks/rox-image-check-task.yml
+# Uncomment and remove gnunn custom one when PR is merged
+#- https://raw.githubusercontent.com/stackrox/contributions/main/ci/Tekton/Tasks/rox-image-check-task.yml
+- https://raw.githubusercontent.com/gnunn1/contributions/main/ci/Tekton/Tasks/rox-image-check-task.yml
 - https://raw.githubusercontent.com/stackrox/contributions/main/ci/Tekton/Tasks/rox-image-scan-task.yml
