--- a/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
+++ b/clusters/local.home/argocd/apps/cluster/overlays/default/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
 - ../../../../../../../components/argocd/apps/config-container-security/base
 - ../../../../../../../components/argocd/apps/config-acs/base
 - ../../../../../../../components/argocd/apps/config-namespace-config-operator/base
-- ../../../../../../../components/argocd/apps/config-web-terminal-operator/base
+# - ../../../../../../../components/argocd/apps/config-web-terminal-operator/base
 - ../../../../../../../components/argocd/apps/config-pipeline-operator/base
 - ../../../../../../../components/argocd/apps/config-sso/base
 - ../../../../../../../components/argocd/apps/config-dev-tools/base
