--- a/components/apps/sso/overlays/default/kustomization.yaml
+++ b/components/apps/sso/overlays/default/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
 - keycloak-migration-job.yaml
 
 patchesJson6902:
-  - path: patch-append-java-opts.yaml
+  - path: patch-sso-statefulset.yaml
     target:
       group: ""
       kind: StatefulSet
