Patch out v1beta1 on rolebindings

--- a/components/apps/sealed-secrets-operator/overlays/default/kustomization.yaml
+++ b/components/apps/sealed-secrets-operator/overlays/default/kustomization.yaml
@@ -17,3 +17,12 @@ patchesJson6902:
     name: sealed-secrets-controller
     namespace: sealed-secrets
   path: patch-update-status.yaml
+
+patches:
+- patch: |-
+    - op: replace
+      path: "/apiVersion"
+      value: rbac.authorization.k8s.io/v1
+  target:
+    group: rbac.authorization.k8s.io
+    version: v1beta1
