--- a/clusters/local.home/apps/clusterversion/base/clusterversion.yaml
+++ b/clusters/local.home/apps/clusterversion/base/clusterversion.yaml
@@ -1,11 +1,11 @@
-apiVersion: config.openshift.io/v1
-kind: ClusterVersion
-metadata:
-  name: version
-spec:
-  channel: fast-4.8
-  clusterID: 4d11acb7-286f-42e1-868c-55f1e15687c7
-  desiredUpdate:
-    image: quay.io/openshift-release-dev/ocp-release@sha256:bf48faa639523b73131ec7c91637d5c94d33a4afe09ac8bdad672862f5e86ccb
-    version: 4.8.14
-  upstream: https://api.openshift.com/api/upgrades_info/v1/graph
+# apiVersion: config.openshift.io/v1
+# kind: ClusterVersion
+# metadata:
+#   name: version
+# spec:
+#   channel: fast-4.8
+#   clusterID: 4d11acb7-286f-42e1-868c-55f1e15687c7
+#   desiredUpdate:
+#     image: quay.io/openshift-release-dev/ocp-release@sha256:bf48faa639523b73131ec7c91637d5c94d33a4afe09ac8bdad672862f5e86ccb
+#     version: 4.8.14
+#   upstream: https://api.openshift.com/api/upgrades_info/v1/graph
