--- a/components/apps/namespace-configuration-operator/overlays/default/patch-default-ns-multitenant.yaml
+++ b/components/apps/namespace-configuration-operator/overlays/default/patch-default-ns-multitenant.yaml
@@ -57,6 +57,7 @@ spec:
             - |
 
               echo "Adding label 'network.openshift.io/policy-group=ingress' to default namespace"
+              echo "Using account $(oc whoami) for patch"
               oc label namespace default 'network.openshift.io/policy-group=ingress' --overwrite
       restartPolicy: Never
       serviceAccountName: patch-job
