--- a/components/apps/namespace-configuration-operator/overlays/default/patch-default-ns-multitenant.yaml
+++ b/components/apps/namespace-configuration-operator/overlays/default/patch-default-ns-multitenant.yaml
@@ -1,3 +1,4 @@
+# This was needed in OCP 4.5, no ,on longer required
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -20,6 +21,7 @@ rules:
       - get
       - list
       - patch
+      - view
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
