--- a/tenants/product-catalog/argocd/applicationset/base/tenant-applicationset.yaml
+++ b/tenants/product-catalog/argocd/applicationset/base/tenant-applicationset.yaml
@@ -25,11 +25,11 @@ spec:
           values:
             name: product-catalog-rbac
             path: tenants/product-catalog/rbac/base
-        - cluster: local
-          url: https://kubernetes.default.svc
-          values:
-            name: product-catalog-monitor
-            path: tenants/product-catalog/monitor/overlays/default
+        # - cluster: local
+        #   url: https://kubernetes.default.svc
+        #   values:
+        #     name: product-catalog-monitor
+        #     path: tenants/product-catalog/monitor/overlays/default
   template:
     metadata:
       name: '{{values.name}}'
