Add pittar's token generation pipeline

--- a/components/apps/acs-operator/overlays/sso/kustomization.yaml
+++ b/components/apps/acs-operator/overlays/sso/kustomization.yaml
@@ -6,6 +6,8 @@ resources:
   - github.com/redhat-cop/gitops-catalog/advanced-cluster-security-operator/instance/overlays/internal-registry-integration
   - sso-sealed-secret.yaml
   - create-sso-auth-provider-job.yaml
+  # Use Andrew's Pipeline to create Stackrox API Tokens in tenant namespaces
+  - github.com/pittar-gitops/gitops-mono-repo-admins/03-cluster-services/08-advanced-cluster-security/pipelines-and-secrets
 
 patchesJson6902:
   - path: patch-resources.yaml
