Fix pipelinerun syntax

--- a/tenants/product-catalog/namespaces/base/generate-token-pipelinerun.yaml
+++ b/tenants/product-catalog/namespaces/base/generate-token-pipelinerun.yaml
@@ -7,5 +7,5 @@ spec:
   pipelineRef:
     name: stackrox-token-secret-pipeline
   params:
-     name: "NAMESPACE"
-     value: "product-catalog-cicd"
+    - name: "NAMESPACE"
+      value: "product-catalog-cicd"
