Patch grafana channel for v4 in 4.9

--- a/tenants/product-catalog/monitor/overlays/default/kustomization.yaml
+++ b/tenants/product-catalog/monitor/overlays/default/kustomization.yaml
@@ -15,6 +15,12 @@ resources:
 patchesJson6902:
 - target:
     version: v1alpha1
+    group: operators.coreos.com
+    kind: Subscription
+    name: grafana
+  path: patch-grafana-channel.yaml
+- target:
+    version: v1alpha1
     group: integreatly.org
     kind: Grafana
     name: grafana
