Fix namespace destination in argo apps

--- a/components/apps/tekton-cluster-tasks/base/kustomization.yaml
+++ b/components/apps/tekton-cluster-tasks/base/kustomization.yaml
@@ -1,3 +1,5 @@
+namespace: openshift
+
 resources:
 - https://raw.githubusercontent.com/stackrox/contributions/main/ci/Tekton/Tasks/rox-deployment-check-task.yml
 # Uncomment and remove gnunn custom one when PR is merged
