--- a/components/argocd/apps/config-compliance-operator/base/config-compliance-operator-app.yaml
+++ b/components/argocd/apps/config-compliance-operator/base/config-compliance-operator-app.yaml
@@ -9,7 +9,7 @@ metadata:
   name: config-compliance-operator
 spec:
   destination:
-    namespace: openshift-gitops
+    namespace: openshift-compliance
     server: https://kubernetes.default.svc
   project: cluster-config
   source:
