--- a/components/argocd/apps/config-sso/base/config-sso-app.yaml
+++ b/components/argocd/apps/config-sso/base/config-sso-app.yaml
@@ -9,7 +9,7 @@ metadata:
   name: config-sso
 spec:
   destination:
-    namespace: openshift-gitops
+    namespace: sso
     server: https://kubernetes.default.svc
   project: cluster-config
   source:
