--- a/components/argocd/apps/sealed-secrets/base/sealed-secrets-app.yaml
+++ b/components/argocd/apps/sealed-secrets/base/sealed-secrets-app.yaml
@@ -9,7 +9,7 @@ metadata:
   name: sealed-secrets
 spec:
   destination:
-    namespace: openshift-gitops
+    namespace: sealed-secrets
     server: https://kubernetes.default.svc
   project: cluster-config
   source:
