--- a/bootstrap/overlays/aws.cluster/cluster-config-manager-app.yaml
+++ b/bootstrap/overlays/aws.cluster/cluster-config-manager-app.yaml
@@ -7,7 +7,7 @@ metadata:
     gitops.ownedBy: cluster-config
 spec:
   destination:
-    namespace: argocd
+    namespace: openshift-gitops
     server: https://kubernetes.default.svc
   project: cluster-config
   source:
