--- a/tenants/product-catalog/namespaces/base/monitor-namespace.yaml
+++ b/tenants/product-catalog/namespaces/base/monitor-namespace.yaml
@@ -4,4 +4,6 @@ metadata:
   annotations:
     openshift.io/description: Project for monitoring tools of product catalog application
     openshift.io/display-name:  Product Catalog Monitor
+  labels:
+    argocd.argoproj.io/managed-by: product-catalog-gitops
   name: product-catalog-monitor
