--- a/components/argocd/apps/config-pipeline-operator/base/config-pipeline-operator-app.yaml
+++ b/components/argocd/apps/config-pipeline-operator/base/config-pipeline-operator-app.yaml
@@ -14,7 +14,7 @@ spec:
   source:
     path: components/apps/pipelines-operator/overlays/patch-config-parameters
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: main
+    targetRevision: master
   syncPolicy:
     automated:
       prune: false
