Update everything to use main branch

--- a/bootstrap/overlays/acm.sandbox/cluster-config-manager-app.yaml
+++ b/bootstrap/overlays/acm.sandbox/cluster-config-manager-app.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     path: clusters/acm.sandbox/argocd/apps/cluster/overlays/default
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: master
+    targetRevision: main
   syncPolicy:
     automated:
       prune: false
