--- a/components/argocd/apps/config-prometheus-user-app/base/config-prometheus-user-app-app.yaml
+++ b/components/argocd/apps/config-prometheus-user-app/base/config-prometheus-user-app-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: components/configs/prometheus-user-app/base
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: master
+    targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
