--- a/components/argocd/apps/config-alertmanager/base/config-alertmanager-app.yaml
+++ b/components/argocd/apps/config-alertmanager/base/config-alertmanager-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: components/configs/alertmanager/base
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: master
+    targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
