--- a/components/argocd/apps/config-authentication/base/config-authentication-app.yaml
+++ b/components/argocd/apps/config-authentication/base/config-authentication-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: components/configs/oauth/overlays/google-with-matrix
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: master
+    targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
