--- a/components/argocd/apps/config-groups-and-membership/base/config-groups-and-membership-app.yaml
+++ b/components/argocd/apps/config-groups-and-membership/base/config-groups-and-membership-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: components/configs/groups-and-membership/overlays/default
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: master
+    targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
