--- a/components/argocd/apps/config-sso/base/config-sso-app.yaml
+++ b/components/argocd/apps/config-sso/base/config-sso-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: components/apps/sso/overlays/default
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: master
+    targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
