--- a/components/argocd/apps/tekton-cluster-tasks/base/tekton-cluster-tasks-app.yaml
+++ b/components/argocd/apps/tekton-cluster-tasks/base/tekton-cluster-tasks-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: components/apps/tekton-cluster-tasks/base
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
-    targetRevision: master
+    targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
