--- a/components/apps/acs-operator/overlays/oauth/create-oauth-auth-provider-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/create-oauth-auth-provider-job.yaml
@@ -23,7 +23,7 @@ spec:
                 key: password
           - name: DEFAULT_ROLE
             value: Admin
-          - NAME: UI_ENDPOINT
+          - name: UI_ENDPOINT
             value: central-stackrox.apps.home.ocplab.com
           command:
             - /bin/bash
