--- a/components/apps/pipelines-operator/overlays/patch-config-parameters/patch-config-parameters-sa.yaml
+++ b/components/apps/pipelines-operator/overlays/patch-config-parameters/patch-config-parameters-sa.yaml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: patch-tekton-config-parameters
+  namespace: openshift-operators
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: patch-tekton-config-parameters
+  namespace: openshift-operators
 rules:
   - apiGroups:
       - tektonconfigs.operator.tekton.dev
@@ -21,6 +23,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: patch-tekton-config-parameters
+  namespace: openshift-operators
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -28,3 +31,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: patch-tekton-config-parameters
+    namespace: openshift-operators
