--- a/clusters/local.home/apps/cost-management-operator/overlays/default/kustomization.yaml
+++ b/clusters/local.home/apps/cost-management-operator/overlays/default/kustomization.yaml
@@ -1,8 +1,10 @@
 kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 
+namespace: costmanagement-metrics-operator
+
 bases:
-- https://github.com/redhat-cop/gitops-catalog/cost-management-operator/overlays/default
+- https://github.com/redhat-cop/gitops-catalog/cost-management-operator/overlays/aggregate
 
 patchesJson6902:
   - path: patch-source-and-name.yaml
