--- a/components/apps/gitops-operator/base/kustomization.yaml
+++ b/components/apps/gitops-operator/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
 - gitops-operator-cr.yaml
-- gitops-workaround-993-role.yaml
+# - gitops-workaround-993-role.yaml
 - in-cluster-secret.yaml
 # These can be used to patch an existing in-cluster secret. Not used
 # since I've opted to deploy the secret directly above.
