Change ClusterRole to Role

--- a/components/apps/tenant-namespace/overlays/gitops/gitops-extended-crd-rolebinding.yaml
+++ b/components/apps/tenant-namespace/overlays/gitops/gitops-extended-crd-rolebinding.yaml
@@ -6,7 +6,7 @@ metadata:
   name: gitops-argocd-extended-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: gitops-argocd-extended-role
 subjects:
   - kind: ServiceAccount
