--- a/tenants/product-catalog/argocd/applicationset/base/tenant-applicationset.yaml
+++ b/tenants/product-catalog/argocd/applicationset/base/tenant-applicationset.yaml
@@ -31,6 +31,12 @@ spec:
         - cluster: local
           url: https://kubernetes.default.svc
           values:
+            name: product-catalog-cicd
+            path: tenants/product-catalog/namespaces/overlays/cicd
+            namespace: product-catalog-cicd
+        - cluster: local
+          url: https://kubernetes.default.svc
+          values:
             name: product-catalog-monitor
             path: tenants/product-catalog/namespaces/overlays/monitor
             namespace: product-catalog-monitor
