--- a/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
@@ -3,6 +3,9 @@ kind: Kustomization
 
 namespace: product-catalog-gitops
 
+commonLabels:
+  argocd.argoproj.io/instance: openshift-gitops
+
 resources:
 - ../../base
 - ../../../../../components/apps/gitops-operator/base
