--- a/tenants/product-catalog/namespaces/overlays/prod/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/prod/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+commonLabels:
+  argocd.argoproj.io/instance: openshift-gitops
+
 resources:
 - ../../base
 - prod-namespace.yaml
