--- a/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
@@ -21,5 +21,5 @@ patches:
       path: /subjects/0/namespace
       value: product-catalog-gitops
   target:
-    kind: ClusterRoleBinding
+    kind: RoleBinding
     name: gitops-argocd-extended-rolebinding
