--- a/tenants/product-catalog/namespaces/overlays/monitor/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/monitor/kustomization.yaml
@@ -16,7 +16,7 @@ patches:
       path: /subjects/0/namespace
       value: product-catalog-monitor
   target:
-    kind: ClusterRoleBinding
+    kind: RoleBinding
     name: gitops-argocd-extended-rolebinding
 
 patchesJson6902:
