--- a/tenants/product-catalog/namespaces/overlays/prod/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/prod/kustomization.yaml
@@ -15,5 +15,5 @@ patches:
       path: /subjects/0/namespace
       value: product-catalog-prod
   target:
-    kind: ClusterRoleBinding
+    kind: RoleBinding
     name: gitops-argocd-extended-rolebinding
