--- a/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
@@ -14,8 +14,8 @@ resources:
 - product-catalog-project.yaml
 - console-link.yaml
 
-# Patch in namespace for Argo CD that is managing this namespace
 patches:
+# Patch in namespace for Argo CD that is managing this namespace
 - patch: |-
     - op: replace
       path: /subjects/0/namespace
@@ -23,3 +23,18 @@ patches:
   target:
     kind: RoleBinding
     name: gitops-argocd-extended-rolebinding
+# Update permissions for instance
+-  target:
+     kind: ArgoCD
+   patch: |-
+    - op: replace
+      path: /spec/applicationInstanceLabelKey
+      value: argocd.argoproj.io/product-catalog-instance
+    - op: add
+      path: /spec/rbac
+      value:
+        defaultPolicy: role:readonly
+        policy: |
+          g, product-catalog-admins, role:admin
+          g, system:cluster-admins, role:admin
+        scopes: "[groups]"
