Return old kustomization to patch instancekey and rbac

--- a/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
@@ -26,6 +26,7 @@ patches:
 # Update permissions for instance
 -  target:
      kind: ArgoCD
+     name: argocd
    patch: |-
     - op: replace
       path: /spec/applicationInstanceLabelKey
