--- a/tenants/product-catalog/namespaces/overlays/dev/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/dev/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-commonLabels:
-  argocd.argoproj.io/instance: openshift-gitops
+# commonLabels:
+#   argocd.argoproj.io/instance: openshift-gitops
 
 resources:
 - ../../base
