--- a/tenants/product-catalog/argocd/applicationset/base/tenant-applicationset.yaml
+++ b/tenants/product-catalog/argocd/applicationset/base/tenant-applicationset.yaml
@@ -13,47 +13,47 @@ spec:
         - cluster: local
           url: https://kubernetes.default.svc
           values:
-            name: product-catalog-dev
+            name: dev
             path: tenants/product-catalog/namespaces/overlays/dev
             namespace: product-catalog-dev
         - cluster: local
           url: https://kubernetes.default.svc
           values:
-            name: product-catalog-test
+            name: test
             path: tenants/product-catalog/namespaces/overlays/test
             namespace: product-catalog-test
         - cluster: local
           url: https://kubernetes.default.svc
           values:
-            name: product-catalog-prod
+            name: prod
             path: tenants/product-catalog/namespaces/overlays/prod
             namespace: product-catalog-prod
         - cluster: local
           url: https://kubernetes.default.svc
           values:
-            name: product-catalog-cicd
+            name: cicd
             path: tenants/product-catalog/namespaces/overlays/cicd
             namespace: product-catalog-cicd
         - cluster: local
           url: https://kubernetes.default.svc
           values:
-            name: product-catalog-monitor
+            name: monitor
             path: tenants/product-catalog/namespaces/overlays/monitor
             namespace: product-catalog-monitor
         - cluster: local
           url: https://kubernetes.default.svc
           values:
-            name: product-catalog-gitops
+            name: gitops
             path: tenants/product-catalog/namespaces/overlays/gitops
             namespace: product-catalog-gitops
         - cluster: local
           url: https://kubernetes.default.svc
           values:
-            name: product-catalog-rbac
+            name: rbac
             path: tenants/product-catalog/rbac/base
   template:
     metadata:
-      name: '{{values.name}}'
+      name: 'tenant-product-catalog-{{values.name}}'
       annotations:
         argocd.argoproj.io/compare-options: IgnoreExtraneous
         argocd.argoproj.io/sync-options: Prune=false
