--- a/tenants/product-catalog/namespaces/overlays/test/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/test/kustomization.yaml
@@ -10,7 +10,7 @@ patches:
 - patch: |-
     - op: replace
       path: /subjects/0/namespace
-      value: product-catalog-test
+      value: product-catalog-gitops
   target:
     kind: RoleBinding
     name: gitops-argocd-extended-rolebinding
