--- a/components/apps/tenant-namespace/overlays/gitops/gitops-extended-crd-role.yaml
+++ b/components/apps/tenant-namespace/overlays/gitops/gitops-extended-crd-role.yaml
@@ -8,7 +8,7 @@ rules:
   - apiGroups:
     - bitnami.com
     resources:
-      - sealedsecret
+      - sealedsecrets
     verbs:
       - '*'
   - apiGroups:
