Use empty automated stanza to stay in-sync

--- a/components/argocd/apps/config-camel-k-operator/base/config-camel-k-operator-app.yaml
+++ b/components/argocd/apps/config-camel-k-operator/base/config-camel-k-operator-app.yaml
@@ -16,6 +16,4 @@ spec:
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
     targetRevision: main
   syncPolicy:
-    automated:
-      prune: false
-      selfHeal: false
+    automated: {}
