--- a/tenants/product-catalog/namespaces/overlays/cicd/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/cicd/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
 - ../../base
 - cicd-namespace.yaml
+- generate-acs-secret.yaml
 
 # Patch in namespace for Argo CD that is managing this namespace
 patches:
