--- a/components/apps/tekton-cluster-tasks/base/kustomization.yaml
+++ b/components/apps/tekton-cluster-tasks/base/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
 #- https://raw.githubusercontent.com/stackrox/contributions/main/ci/Tekton/Tasks/rox-image-check-task.yml
 - https://raw.githubusercontent.com/gnunn1/contributions/main/ci/Tekton/Tasks/rox-image-check-task.yml
 - https://raw.githubusercontent.com/stackrox/contributions/main/ci/Tekton/Tasks/rox-image-scan-task.yml
+- github.com/gnunn1/tekton-lease/base
